Fix horizontal scrollbar wrongly displayed on Index.jsp by hiding all overflow

--- a/CupCake/src/main/webapp/css/cssGlobal.css
+++ b/CupCake/src/main/webapp/css/cssGlobal.css
@@ -90,7 +90,6 @@
 
 #footerLink
 {
-    
     position: fixed;
     left: 0;
     bottom: 0;
@@ -153,6 +152,7 @@ html, body
     padding: 0;*/
     font-family: 'Oswald', sans-serif;
     padding-bottom: 1rem;
+     overflow: hidden;
 
 }
 
